docs: query
